--- a/roles/ntp/tasks/main.yml
+++ b/roles/ntp/tasks/main.yml
@@ -1,14 +1,27 @@
 ---
 - block:
+
   - name: Install NTP package
-    dnf: name=ntp state=present
+    dnf:
+      name: ntp
+      state: present
+
   - name: Copy NTP config file
-    copy: src=ntp.conf dest=/etc/ntp.conf
+    copy:
+      src: ntp.conf
+      dest: /etc/ntp.conf
+
   - name: Sync system clock with NTP pool
     command: ntpdate -b pool.ntp.org
     ignore_errors: yes # This will fail if the NTP port is already bound.
+
   - name: Start and enable the NTP service
-    service: name=ntpd state=started enabled=yes
+    service:
+      name: ntpd
+      state: started
+      enabled: yes
+
   - name: Check NTP service by querying
     command: ntpq -p
+
   become: yes
