Fix ntp hostnames

--- a/roles/ntp/files/ntp.conf
+++ b/roles/ntp/files/ntp.conf
@@ -12,10 +12,10 @@ server 2.pool.ntp.org iburst dynamic
 server 3.pool.ntp.org iburst dynamic
 
 # Prevent upstream servers from querying or modifying.
-restrict 0.fedora.pool.ntp.org mask 255.255.255.255 nomodify notrap noquery
-restrict 1.fedora.pool.ntp.org mask 255.255.255.255 nomodify notrap noquery
-restrict 2.fedora.pool.ntp.org mask 255.255.255.255 nomodify notrap noquery
-restrict 3.fedora.pool.ntp.org mask 255.255.255.255 nomodify notrap noquery
+restrict 0.pool.ntp.org mask 255.255.255.255 nomodify notrap noquery
+restrict 1.pool.ntp.org mask 255.255.255.255 nomodify notrap noquery
+restrict 2.pool.ntp.org mask 255.255.255.255 nomodify notrap noquery
+restrict 3.pool.ntp.org mask 255.255.255.255 nomodify notrap noquery
 
 # Allow query access on private subnets.
 restrict 192.168.0.0 mask 255.255.0.0 nomodify notrap
