Update vim-minimal to fix package conflict

--- a/roles/machine/tasks/main.yml
+++ b/roles/machine/tasks/main.yml
@@ -14,4 +14,9 @@
       name: libselinux-python
       state: present
 
+  - name: Update vim-minimal package
+    dnf:
+      name: vim-minimal
+      state: latest
+
   become: yes
