--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -1,9 +1,12 @@
 ---
 machine_timezone: Etc/UTC
-mysql_db_root_password: password
 dns_backend_db_name: powerdns
 dns_backend_db_user_name: powerdns
-dns_backend_db_user_password: password
-poweradmin_session_key: supersecret
+dns_backend_db_user_hosts:
+- localhost
+- 127.0.0.1
+- ::1
+- 192.168.%
+- 10.0.0.%
 ssl_keys_directory: /root/keys
 ssl_certs_directory: /root/certs
