--- a/roles/hostmaster/templates/reverse_proxy.nginx.conf
+++ b/roles/hostmaster/templates/reverse_proxy.nginx.conf
@@ -20,8 +20,7 @@ events {
 
 pid /run/nginx.pid;
 
-# Log to stderr so docker can handle log output.
-error_log /dev/stderr notice;
+error_log /var/log/nginx/error.log notice;
 
 # Load dynamic modules.
 include /usr/share/nginx/modules/*.conf;
@@ -37,8 +36,7 @@ http {
                   '$status $body_bytes_sent "$http_referer" '
                   '"$http_user_agent" "$http_x_forwarded_for"';
 
-  # Log to stdout so docker can handle log output.
-  access_log /dev/stdout main;
+  access_log /var/log/nginx/access.log main;
 
   # Use sendfile() instead of read()/write().
   sendfile on;
