--- a/roles/hostmaster/tasks/main.yml
+++ b/roles/hostmaster/tasks/main.yml
@@ -59,7 +59,7 @@
       # Double the default timeout.
       # docker-compose was getting impatient with dnf and sent SIGKILL after 60
       # seconds of inactivity.
-      timeout: 120
+      http_timeout: 120
       # Force rebuilds of the image.
       # Ansible does not rebuild the image even after changing the Dockerfile.
       force: yes
@@ -72,7 +72,7 @@
       # Double the default timeout.
       # docker-compose was getting impatient with dnf and sent SIGKILL after 60
       # seconds of inactivity.
-      timeout: 120
+      http_timeout: 120
       # Force rebuilds of the image.
       # Ansible does not rebuild the image even after changing the Dockerfile.
       force: yes
